# PaperReading

./: .gitignore  ENVIRONMENT.md  FIX_SUMMARY.md  QUICKSTART.md  README.md  config.example.yaml  environment.yml  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  analyzer.py  prompts.py  reviewer.py
backup/20251203_173819/: prompts.py  workflow.py
graph/: __init__.py  state.py  workflow.py
utils/: __init__.py  checkpoint.py  llm_client.py  pdf_parser.py
