[project]
name = "paper-analysis-multiagent"
version = "1.0.0"
description = "Multi-Agent Paper Analysis System using LangGraph"
requires-python = ">=3.10,<3.11"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    # LangGraph and LangChain
    "langgraph==0.2.16",
    "langchain==0.2.16",
    "langchain-core==0.2.38",
    "langchain-community==0.2.16",
    "langchain-openai==0.1.23",
    "langgraph-checkpoint==1.0.12",
    "langchain-text-splitters==0.2.4",

    # PDF Processing
    "PyMuPDF==1.26.6",
    "pdfplumber==0.11.8",
    "pymupdf4llm==0.2.0",

    # OpenAI Compatible API
    "openai==1.40.0",
    "httpx==0.27.0",  # Important: 0.27.0 required for OpenAI 1.40.0 compatibility

    # Configuration
    "pyyaml==6.0.1",
    "python-dotenv==1.0.0",

    # Core Dependencies
    "pydantic==2.8.2",
    "typing-extensions==4.12.2",

    # NLP (Optional)
    "spacy==3.7.5",
    "tiktoken==0.7.0",

    # Utilities
    "requests==2.32.5",
    "tenacity==8.5.0",
    "tqdm==4.67.1",
    "rich==14.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
